--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-proxy-middleware": "^0.19.1",
     "js-md5": "^0.7.3",
     "mobile-device-detect": "^0.4.3",
+    "node-sass": "^5.0.0",
     "qs": "^6.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -21,9 +22,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-swipeable-views": "^0.13.9",
-    "react-swipeable-views-utils": "^0.14.0-alpha.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "swiper": "^6.4.15",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
