--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mobile-device-detect": "^0.4.3",
     "node-sass": "^5.0.0",
     "qs": "^6.7.0",
+    "query-string": "^6.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
