--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "ali-oss": "^6.13.2",
     "antd-mobile": "^2.3.4",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
